--- a/接口一.md
+++ b/接口一.md
@@ -9,7 +9,15 @@
 
 **GET**
 
+#### 请求地址
+
+*http://www.XXXX.com*
+
 #### 接口参数
 
-| 参数 || 类型 |
-| hello || String |
+| 参数 | 类型 |
+|------|------|
+| hello | String |
+
+#### 返回类型
+
