--- a/接口一.md
+++ b/接口一.md
@@ -21,3 +21,13 @@
 
 #### 　返回类型
 
+```
+{
+    "code":200,
+    "result":{
+        "result1":"result1",
+        "result2":"result2"
+    }
+}
+
+```
