--- a/接口一.md
+++ b/接口一.md
@@ -18,7 +18,7 @@
 |------|------|
 | hello | String |
 
-#### 　返回类型
+#### 　返回结果
 
 ```
 {
@@ -30,3 +30,6 @@
 }
 
 ```
+
+####　code代码
+`200`,`500`,`404`
