--- a/接口一.md
+++ b/接口一.md
@@ -33,3 +33,36 @@
 
 ####　code代码
 `200`,`500`,`404`
+
+## 2.测试接口一
+
+> 该接口的介绍
+
+#### 　接口方法
+　　**GET**
+
+#### 　请求地址
+
+　*http://{url}/web/test*
+
+#### 　接口参数
+
+| 参数 | 类型 |
+|------|------|
+| hello | String |
+
+#### 　返回结果
+
+```
+{
+    "code":200,
+    "result":{
+        "result1":"result1",
+        "result2":"result2"
+    }
+}
+
+```
+
+####　code代码
+`200`,`500`,`404`
