--- a/接口一.md
+++ b/接口一.md
@@ -34,7 +34,7 @@
 ####　code代码
 `200`,`500`,`404`
 
-## 2.测试接口一
+## 2.测试接口二
 
 > 该接口的介绍
 
@@ -43,13 +43,17 @@
 
 #### 　请求地址
 
-　*http://{url}/web/testpost*
+　*http://{url}/web/test_post*
 
 #### 　接口参数
 
-| 参数 | 类型 |
-|------|------|
-| hello | String |
+```
+{
+    "parm1":"p1",
+    "parm2":"p2"
+}
+
+```
 
 #### 　返回结果
 
