--- a/接口一.md
+++ b/接口一.md
@@ -40,14 +40,14 @@
 
 > 该接口的介绍
 
-#### 　接口方法
+#### 　1. 接口方法
 　　**POST**
 
-#### 　请求地址
+#### 　2. 请求地址
 
 　*http://{url}/web/test_post*
 
-#### 　接口参数
+#### 　3. 接口参数
 
 ```
 {
@@ -57,7 +57,7 @@
 
 ```
 
-#### 　返回结果
+#### 　4. 返回结果
 
 ```
 {
