--- a/接口一.md
+++ b/接口一.md
@@ -12,13 +12,13 @@
 
 　*http://{url}/web/test*
 
-#### 　接口参数
+#### 　3. 接口参数
 
 | 参数 | 类型 |
 |------|------|
 | hello | String |
 
-#### 　3. 返回结果
+#### 　4. 返回结果
 
 ```
 {
@@ -31,7 +31,7 @@
 
 ```
 
-####　4. code代码
+####　5. code代码
 　　`200`,`500`,`404`
 
 ***
